# Zoltraak

./: .gitignore  README.md  docker-compose.yml
backend/: requirements.txt
backend/api/: .env  config.py  logs.py  main.py
backend/api/models/: db_helper.py  wallet_model.py
backend/api/models/accounts/: account_model.py  mining_model.py
backend/api/routers/: __init__.py  router_A.py
backend/api/services/: db_service.py
blockchain/: Cargo.toml
blockchain-rust/src/: main.rs
blockchain-rust/src/blocks/: block.rs~
blockchain/contracts/: ZoltraakToken.func
blockchain/scripts/: deploy.sh
blockchain/src/: blockchain.rs
blockchain_rust/src/: logs.rs
blockchain_rust/src/blocks/: block.rs
blockchain_rust/src/transactions/: transaction.rs
docs/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.vue  main.css  main.ts
frontend/src/assets/: output.css
frontend/src/components/logo/: Zlogo.vue
frontend/src/router/: index.ts
frontend/src/views/: ConnectingView.vue  HomeView.vue
scripts/: setup.sh
