[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.41.1", features = ["full"] }
mio = "1.0.2"
tokio-stream = "0.1.8"

serde = { version = "1.0.130", features = ["derive"] }

log = "0.4.14"
fern = "0.7.0"
chrono = "0.4.38"

env_logger = "0.11.5"
sha2 = "0.10.8"

rand = "0.9.0-alpha.2"

hex = "0.4.3"
